--- a/batch_gradient_descent_code_scratch.ipynb
+++ b/batch_gradient_descent_code_scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "74d6bc64-bd8c-439f-a171-b83ac7df8362",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "5eeb4c51-8e80-4d1e-a53f-d6e657d2cfc6",
    "metadata": {},
    "outputs": [
@@ -94,7 +94,7 @@
        " 'data_module': 'sklearn.datasets.data'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "3888599a-2a6f-4c9d-bb7a-5349e7bd3c6d",
    "metadata": {},
    "outputs": [],
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "87574271-6fd7-4467-87e4-31da076627b4",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "13eed741-7c55-44e1-9681-1ae2051a1b24",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "4 -0.002592 -0.031988 -0.046641   135.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "c94e0a39-7217-4dfe-8782-a72e9b72ead9",
    "metadata": {},
    "outputs": [],
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "1afd50e8-5e58-466d-a98a-4fc1e3615a39",
    "metadata": {},
    "outputs": [],
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "b4550bd0-36ab-44da-9160-c8cab111da8f",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "1851beef-35d7-401b-bc20-2397fc9bdfe0",
    "metadata": {},
    "outputs": [],
@@ -306,17 +306,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "6d45747c-87d2-4a6c-ab10-93517a13feb7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1, random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "12be00ab-9c33-4ad0-b9dd-1a2a38092917",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 26,
    "id": "2ff80d24-7f5a-4696-9596-73e94a7608bc",
    "metadata": {},
    "outputs": [],
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 27,
    "id": "5179db59-80f8-492a-8ffe-7d1c55ff2ae1",
    "metadata": {},
    "outputs": [
@@ -349,7 +349,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -360,39 +360,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "id": "7a314c4a-d851-4bfa-bedc-6c92c554fb24",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([139.5475584 , 179.51720835, 134.03875572, 291.41702925,\n",
-       "       123.78965872,  92.1723465 , 258.23238899, 181.33732057,\n",
-       "        90.22411311, 108.63375858,  94.13865744, 168.43486358,\n",
-       "        53.5047888 , 206.63081659, 100.12925869, 130.66657085,\n",
-       "       219.53071499, 250.7803234 , 196.3688346 , 218.57511815,\n",
-       "       207.35050182,  88.48340941,  70.43285917, 188.95914235,\n",
-       "       154.8868162 , 159.36170122, 188.31263363, 180.39094033,\n",
-       "        47.99046561, 108.97453871, 174.77897633,  86.36406656,\n",
-       "       132.95761215, 184.53819483, 173.83220911, 190.35858492,\n",
-       "       124.4156176 , 119.65110656, 147.95168682,  59.05405241,\n",
-       "        71.62331856, 107.68284704, 165.45365458, 155.00975931,\n",
-       "       171.04799096,  61.45761356,  71.66672581, 114.96732206,\n",
-       "        51.57975523, 167.57599528, 152.52291955,  62.95568515,\n",
-       "       103.49741722, 109.20751489, 175.64118426, 154.60296242,\n",
-       "        94.41704366, 210.74209145, 120.2566205 ,  77.61585399,\n",
-       "       187.93203995, 206.49337474, 140.63167076, 105.59678023,\n",
-       "       130.70432536, 202.18534537, 171.13039501, 164.91423047,\n",
-       "       124.72472569, 144.81030894, 181.99635452, 199.41369642,\n",
-       "       234.21436188, 145.95665512,  79.86703276, 157.36941275,\n",
-       "       192.74412541, 208.89814032, 158.58722555, 206.02195855,\n",
-       "       107.47971675, 140.93598906,  54.82129332,  55.92573195,\n",
-       "       115.01180018,  78.95584188,  81.56087285,  54.37997256,\n",
-       "       166.2543518 ])"
+       "array([143.06549158, 177.7061702 , 134.79901866, 288.67009951,\n",
+       "       123.58658064,  96.64279345, 252.70727574, 183.51437294,\n",
+       "        93.96679126, 109.83567271,  98.04584067, 168.6157848 ,\n",
+       "        58.09603726, 206.59004617, 102.4046759 , 130.25483366,\n",
+       "       218.05518616, 245.91819051, 193.24561396, 214.36953807,\n",
+       "       208.82839114,  90.55628576,  74.15157442, 187.12342576,\n",
+       "       156.3642741 , 157.46594185, 184.17437321, 177.18270901,\n",
+       "        52.24311033, 110.66618343, 174.05770617,  90.8969391 ,\n",
+       "       133.07838489, 183.22702102, 173.93636697, 189.8528273 ,\n",
+       "       125.8627716 , 121.53079768, 148.94645924,  60.82914409,\n",
+       "        76.36004131, 106.39774469, 162.2028406 , 153.15220926,\n",
+       "       174.23219731])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -403,48 +392,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "id": "1f59e15c-741e-437e-9a6d-e5ec7f73887f",
+   "execution_count": 38,
+   "id": "b65c267d-4ecf-4340-b7a7-e7862a26e3c5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "151.34560453985995\n",
-      "[  37.90402135 -241.96436231  542.42875852  347.70384391 -931.48884588\n",
-      "  518.06227698  163.41998299  275.31790158  736.1988589    48.67065743]\n"
+      "151.7226464572191\n",
+      "[  19.92730105 -262.5526422   509.19584695  336.09319329 -849.30479304\n",
+      "  480.22664735  120.69064852  236.72228404  716.61278802   70.41001991]\n"
      ]
     }
    ],
    "source": [
     "print(reg.intercept_)\n",
-    "print(reg.coef_)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 98,
-   "id": "da95b876-b293-477f-9aa1-096851090210",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print(reg.coef_)\n",
+    "\n",
     "y_pred = reg.predict(X_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 31,
    "id": "e633d9c0-eb26-4d56-b56f-a991594be1a3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(353, 10)"
+       "(397, 10)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 32,
    "id": "f8745be7-8aed-416a-90be-ab48fabe3e0e",
    "metadata": {},
    "outputs": [
@@ -465,7 +446,7 @@
        "array([1., 1., 1., 1., 1., 1., 1., 1., 1., 1.])"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 33,
    "id": "558ad632-3362-4906-9d15-90bce7e9b622",
    "metadata": {},
    "outputs": [],
@@ -508,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 34,
    "id": "c38c3802-f550-4f0f-ac79-73b4e89ddf77",
    "metadata": {},
    "outputs": [
@@ -516,9 +497,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "151.3927575789504\n",
-      "[  42.82153069 -196.00442676  501.18585072  321.47595635  -66.77452088\n",
-      " -115.46363505 -214.67320442  144.79812099  370.81717503  117.08512115]\n"
+      "151.9165917649348\n",
+      "[  27.24977179 -206.09808307  471.97888512  304.23814698  -55.37142574\n",
+      " -106.93819961 -212.84544249  136.4212983   378.94799236  126.04189729]\n"
      ]
     }
    ],
@@ -530,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 35,
    "id": "346d972c-2c9a-4ad0-8e7f-3b47e180d59c",
    "metadata": {},
    "outputs": [],
@@ -540,17 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 36,
    "id": "4fc712de-cf01-4f7a-930f-c9e643ff0253",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.45912008611292665"
+       "0.5494695877975875"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -561,17 +542,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 37,
    "id": "c0b67db9-2948-4166-889e-9f0c5f4f4ee0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.4526027629719197"
+       "0.5514200923362625"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,6 +565,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "1df0ec7e-9721-4ce0-8510-88fe8b3faccc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "abd7d994-6ee8-4ef9-bef5-a9b98e517020",
    "metadata": {},
    "outputs": [],
    "source": []
