--- a/SGD_regressor.ipynb
+++ b/SGD_regressor.ipynb
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "id": "63bc81fd-410d-42b3-89f7-01089bd8bbb1",
    "metadata": {},
    "outputs": [],
@@ -157,8 +157,7 @@
     "class SGD_regressor:\n",
     "    def __init__(self,lr,epochs):\n",
     "        self.lr = lr\n",
-    "        self.epochs = epochs \n",
-    "        \n",
+    "        self.epochs = epochs    \n",
     "\n",
     "    def fit(self,X_train,y_train):\n",
     "        self.intercept = 0 \n",
@@ -186,17 +185,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 48,
    "id": "e6479f90-bd44-4b19-8307-140bc482bfd7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "sgd = SGD_regressor(0.1,55)"
+    "sgd = SGD_regressor(0.01,50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 49,
    "id": "88464ad6-002c-4216-9273-ead17678d799",
    "metadata": {},
    "outputs": [
@@ -204,9 +203,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "149.16312021344268\n",
-      "[  41.2082898  -246.92043521  554.7213744   359.64822473 -132.1549865\n",
-      " -106.74666041 -200.6258781   151.47852195  416.93641897   32.58083551]\n"
+      "154.49613928228925\n",
+      "[  56.07232124  -90.18255555  361.50228726  255.63559861    6.44515628\n",
+      "  -27.60705475 -184.43607292  154.7951879   286.87936762  143.26404863]\n"
      ]
     }
    ],
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "id": "ba1e958c-9e1d-4b50-af91-c840864d6ef5",
    "metadata": {},
    "outputs": [
@@ -224,30 +223,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.4526027629719197\n"
+      "0.44736961729508384\n"
      ]
     }
    ],
    "source": [
     "y_pred_2 = sgd.predict(X_test)\n",
-    "print(r2_score(y_test,y_pred))"
+    "print(r2_score(y_test,y_pred_2))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "aec6b0b2-a823-4925-b420-0ad13ec23e76",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f00716fd-09b0-4f78-8790-73368e0832ed",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
